# django-jet-3-calm

./: .cursorrules  .gitignore  CHANGELOG.md  CHANGELOG.rst  README.rst  RELEASING.md  SECURITY.md  gulpfile.js  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: autofix.yml  backend-coverage.yml
docs/: conf.py  config_file.rst
jet/: __init__.py  admin.py  filters.py  forms.py  models.py  ordered_set.py  settings.py  urls.py  utils.py  views.py
jet/dashboard/: dashboard.py  forms.py  models.py  modules.py  settings.py  urls.py  utils.py  views.py
jet/dashboard/dashboard_modules/: google_analytics.py  google_analytics_views.py  yandex_metrika.py  yandex_metrika_views.py
jet/dashboard/migrations/: 0001_initial.py
jet/dashboard/south_migrations/: 0001_initial.py
jet/dashboard/templates/jet.dashboard/modules/: external_embed.html  model_stats.html
jet/dashboard/templatetags/: jet_dashboard_tags.py
jet/management/commands/: jet_custom_apps_example.py  jet_side_menu_items_example.py
jet/migrations/: 0001_initial.py  0002_delete_userdashboardmodule.py  0003_savedfilterview_userpreferences.py
jet/south_migrations/: 0001_initial.py  0002_auto__del_userdashboardmodule.py
jet/static/jet/css/: _base.scss  _breadcrumbs.scss  _changeform.scss  _changelist.scss  _content.scss  _dashboard.scss  _delete-confirmation.scss  _forms.scss  _globals.scss  _header.scss  _helpers.scss  _jetfeatures.scss  _login.scss  _messages.scss  _modules.scss  _object-tools.scss  _relatedpopup.scss  _sidebar.scss  _tables.scss  _variables.scss  jquery.ui.timepicker.css  vendor.css
jet/static/jet/css/jquery-ui/: _jquery-ui.theme.scss
jet/static/jet/css/select2/: _layout.scss  _multiple.scss  _single.scss
jet/static/jet/css/temp/: jquery-ui.css
jet/static/jet/css/themes/blowhorn/: _variables.scss  base.css  base.css.map  jquery-ui.theme.css  jquery-ui.theme.css.map  select2.theme.css  select2.theme.css.map
jet/static/jet/css/themes/dark/: _variables.scss  base.scss
jet/static/jet/css/themes/dark-blue/: _variables.scss  base.css  jquery-ui.theme.css  jquery-ui.theme.scss  select2.theme.css  select2.theme.scss
jet/static/jet/css/themes/default/: base.css  base.css.map  jquery-ui.theme.css  jquery-ui.theme.css.map  select2.theme.css  select2.theme.css.map
jet/static/jet/css/themes/green/: _variables.scss  base.css  base.css.map  jquery-ui.theme.css  jquery-ui.theme.css.map  select2.theme.css  select2.theme.css.map
jet/static/jet/css/themes/light-blue/: _variables.scss  base.css  base.css.map  base.scss  jquery-ui.theme.css  jquery-ui.theme.css.map  select2.theme.css  select2.theme.css.map
jet/static/jet/css/themes/light-gray/: _variables.scss  base.css  base.css.map  jquery-ui.theme.css  jquery-ui.theme.css.map  select2.theme.css  select2.theme.css.map
jet/static/jet/css/themes/light-green/: _variables.scss  base.css  base.css.map  base.scss  jquery-ui.theme.css  jquery-ui.theme.css.map  jquery-ui.theme.scss  select2.theme.css  select2.theme.css.map  select2.theme.scss
jet/static/jet/css/themes/light-violet/: _variables.scss  base.css  base.css.map  jquery-ui.theme.css  jquery-ui.theme.css.map  select2.theme.css  select2.theme.css.map
jet/static/jet/css/themes/material-you/: _variables.scss  base.css  base.css.map  base.scss  jquery-ui.theme.css  jquery-ui.theme.css.map  jquery-ui.theme.scss  select2.theme.css  select2.theme.css.map  select2.theme.scss
jet/static/jet/css/themes/primary/: _variables.scss  base.css  base.css.map  jquery-ui.theme.css  jquery-ui.theme.css.map  jquery-ui.theme.scss  select2.theme.css  select2.theme.css.map
jet/static/jet/js/src/: main.js
jet/static/jet/js/src/features/: changeform-tabs.js  changeform.js  changelist.js  checkboxes.js  command-palette.js  dashboard.js  date-time-widgets.js  filters.js  inlines.js  jquery.ui.timepicker.js  preferences.js  related-popups.js  saved-filters.js  scroll-to-bottom-detector.js  selects.js  siblings.js  themes.js  tooltips.js  (+1 more)
jet/templates/admin/: base.html  filter.html
jet/templates/admin/includes/: fieldset.html
jet/templatetags/: jet_tags.py
jet/tests/: admin.py  dashboard.py  models.py  settings.py  test_dashboard.py  test_filters.py  test_ordered_set.py  test_tags.py  test_utils.py  test_views.py  urls.py
(+18 files in other folders)
