[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "django-jet-calm"
version = "5.4.1"
description = "Modern template for Django-4 admin interface with improved functionality"
readme = "README.rst"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    {name = "Akshara Hegde", email = "akshara.dt@gmail.com"}
]
maintainers = [
    {name = "Akshara Hegde", email = "akshara.dt@gmail.com"}
]
keywords = ["django", "admin", "interface", "jet", "django-4", "modern"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Web Environment",
    "Topic :: Software Development",
    "Topic :: Software Development :: User Interfaces",
]
requires-python = ">=3.9"
dependencies = [
    "Django>=4.0",
    "six",
    "django-rangefilter",
]

[project.urls]
Homepage = "https://github.com/aksharahegde/django-jet-3-calm"
Repository = "https://github.com/aksharahegde/django-jet-3-calm"
Documentation = "https://github.com/aksharahegde/django-jet-3-calm#readme"
"Bug Tracker" = "https://github.com/aksharahegde/django-jet-3-calm/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "black",
    "flake8",
]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["jet*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.rst", "*.md", "*.html", "*.css", "*.js", "*.scss", "*.png", "*.jpg", "*.gif", "*.svg", "*.mo", "*.po"]
