[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-jet-calm"
version = "5.4.5"
description = "Modern template for Django-4 admin interface with improved functionality"
readme = "README.rst"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    {name = "Akshara Hegde", email = "akshara.dt@gmail.com"}
]
maintainers = [
    {name = "Akshara Hegde", email = "akshara.dt@gmail.com"}
]
keywords = ["django", "admin", "interface", "jet", "django-4", "modern"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Web Environment",
    "Topic :: Software Development",
    "Topic :: Software Development :: User Interfaces",
]
requires-python = ">=3.9"
dependencies = [
    "Django>=5.2.15",
    "six>=1.17.0",
    "django-rangefilter>=0.9.1",
]

[project.urls]
Homepage = "https://github.com/aksharahegde/django-jet-3-calm"
Repository = "https://github.com/aksharahegde/django-jet-3-calm"
Documentation = "https://github.com/aksharahegde/django-jet-3-calm#readme"
"Bug Tracker" = "https://github.com/aksharahegde/django-jet-3-calm/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "pytest-cov",
    "black",
    "flake8",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "jet.tests.settings"
testpaths = ["jet/tests"]
addopts = "--cov=jet --cov-report=term-missing --cov-fail-under=75"

[tool.coverage.run]
omit = [
    "jet/dashboard/dashboard_modules/*",
    "jet/south_migrations/*",
    "jet/dashboard/south_migrations/*",
    "jet/management/commands/*",
]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["jet*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.rst", "*.md", "*.html", "*.css", "*.js", "*.scss", "*.png", "*.jpg", "*.gif", "*.svg", "*.mo", "*.po"]
